llvm-toolchain-3.8 (1:3.8.1-25) unstable; urgency=medium

  * Fix the detection of gcc (Closes: #853523)
  * Force the deactivation of ocaml until the transition is done
  * Standards-Version: 4.1.0

  [ Gianfranco Costamagna, John Paul Adrian Glaubitz ]
  * Add powerpcspe to latomic archs

  [ Gianfranco Costamagna ]
  * use -g1 where Debug symbols have a 1GB size


 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 21 Oct 2017 13:43:31 +0200

llvm-toolchain-3.8 (1:3.8.1-24) unstable; urgency=medium

  * Team upload
  * debian/patches/fix-R_AARCH64_MOVW_UABS_G3-relocation.patch:
    fix relocation issue, preventing Julia from working correctly on
    arm64 (Closes: #862360, #861484)
  * debian/patches/asan-48bit-VMA-aarch64.patch:
    - fix asan testsuite hang with some arm64 builders.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 02 Jun 2017 15:11:29 +0200

llvm-toolchain-3.8 (1:3.8.1-23) unstable; urgency=medium

  * Oups, same player try again (wrong package name, sorry)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 25 Apr 2017 19:46:34 +0200

llvm-toolchain-3.8 (1:3.8.1-22) unstable; urgency=medium

  * Really fix "use versioned symbols" for llvm
    Thanks to Julien Cristau for the patch (Closes: #849098)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 25 Apr 2017 15:07:56 +0200

llvm-toolchain-3.8 (1:3.8.1-21) unstable; urgency=medium

  * Remove the scan-build-py-3.8 symlink (does not ship in 3.8)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 23 Apr 2017 22:37:21 +0200

llvm-toolchain-3.8 (1:3.8.1-20) unstable; urgency=medium

  * Limit the archs where the ocaml binding is built
    Should fix the FTBFS
    Currently amd64 arm64 armel armhf i386

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 15 Apr 2017 10:38:51 +0200

llvm-toolchain-3.8 (1:3.8.1-19) unstable; urgency=medium

  * Upload in unstable
  * Bring back ocaml. Thanks to Cyril Soldani (Closes: #858626)
